--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,7 +41,11 @@ header .container {
 	}
 
     .form-actions {
-    margin: 0;
+    margin-top: 20px;
     background-color: transparent;
     text-align: center;
+}
+
+.form-group{
+    padding: 10px;
 }
